--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
