add mongo uri to docker compose

--- a/frontend-dev-compose.yml
+++ b/frontend-dev-compose.yml
@@ -22,6 +22,6 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/yourdbname
+      - MONGO_URI=mongodb://mongo:27017
     volumes:
       - ./app-backend:/app
